Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

Thanks!

2.1.0.2103
----------
- Fix next unread behavior in sorted article list.
- Select a new subscription after dragging from an external source.

2.1.0.2102
----------
- Fixed bug: folder attributes (e.g., unread count) not always written to database.
- Don't reload current folder after refresh if preference is set to mark articles read automatically.
- Avoid leaking or crashing with URL connections.
- Move storage of preference for folder sort method from preferences file to database,
  so that it (and manual sort order) can survive deletion of preferences file.
- Enable reloading of web page that never loaded because of error.
- Fixed bug: When deleting multiple folders, the currently selected folder remained selected.
- Enable use of backward delete key.
- Removed multiple delete commands from main menu.
- Added rudimentary Applescript support for retrieving html source of current browser tab.
- Adjust refresh check timer after waking from sleep to account for time asleep. Wait at least 15 seconds
  before refreshing after wake to avoid connection errors.
- When updating existing articles during refresh, don't change article flags.
- Fix bug: existing articles updated even when body hasn't changed.
- Handle relative URLs in article pane.
- Automatic check for folder image only occurs once.
- Fix bugs: next sibling not set for new folder or for folder moved to first child of root node.
- Select new group folder after creating.

2.1.0.2101
----------
- Restored Mac OS 10.3.9 support.

2.1.0.2100
----------
(Contributions from Jeffrey Johnson and David Kocher).
- Added preference for automatically or manually sorting folders view.
- Added "Increase text size" and "Decrease Text Size" for browser view.